fixing z-index of key-panel  and jump-to panel

--- a/awx/ui/client/features/networking/_index.less
+++ b/awx/ui/client/features/networking/_index.less
@@ -205,6 +205,7 @@
     position: absolute;
     right: 0px;
     background-color: white;
+    z-index: 100;
 }
 
 .Networking-dropdownPanelTitle{
@@ -244,6 +245,7 @@
     background-color: white;
     position: absolute;
     right:0px;
+    z-index: 100;
 }
 
 .Networking-keyPanelOption{
